tests/models/enum/named/unit/fail/validate.stderr
error: Support condition is alias, default
 --> tests/models/enum/named/unit/fail/validate.rs:6:9
  |
6 |         value: ()
  |         ^^^^^

warning: unused import: `Result`
 --> tests/models/enum/named/unit/fail/validate.rs:1:19
  |
1 | use dade::{model, Result};
  |                   ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
